@@ -58,8 +58,8 @@ class TestDuecredit(object):
         ("MDAnalysis.analysis.psa",
          "MDAnalysis.analysis.psa",
          "10.1371/journal.pcbi.1004568"),
-        ("MDAnalysis.analysis.hbonds.hbond_autocorrel",
-         "MDAnalysis.analysis.hbonds.hbond_autocorrel",
+        ("MDAnalysis.analysis.hydrogenbonds.hbond_autocorrel",
+         "MDAnalysis.analysis.hydrogenbonds.hbond_autocorrel",
          "10.1063/1.4922445"),
         ("MDAnalysis.analysis.leaflet",
          "MDAnalysis.analysis.leaflet",
